--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.c linguist-language=c
-*.cpp linguist-language=cpp
-*.h linguist-language=c
+*.c linguist-language=C/CPP
+*.cpp linguist-language=C/CPP
+*.h linguist-language=C/CPP
