--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.c linguist-language=c/cpp
-*.cpp linguist-language=c/cpp
-*.h linguist-language=c/cpp
+*.c linguist-language=c,cpp
+*.cpp linguist-language=c,cpp
+*.h linguist-language=c,cpp
